<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_application_id" translatable="false" >652274723290711</string>
    <string name="fb_login_protocol_scheme"  translatable="false">fb652274723290711</string>
    <string name="facebook_client_token" translatable="false" >5b1518ac4a29634fc6ed358468ae019c</string>

    <string name="app_name">Je suis affamé</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="map">Carte</string>
    <string name="rest">Restaurants</string>
    <string name="collegue">Collègues</string>

    <string name="call">Appel</string>
    <string name="like">Aimer</string>
    <string name="website">Site web</string>

    <string name="navigation_drawer_open">Ouverture</string>
    <string name="navigation_drawer_close">Fermeture</string>

    <string name="ylunch">Ton Déj</string>
    <string name="settings">Paramètre</string>
    <string name="logout">Déconnexion</string>

    <string name="icone_appel">icone_appel</string>
    <string name="icone_aime">icone_aime</string>
    <string name="icone_world">icone_monde</string>

    <string name="go4lunch">Go4Lunch</string>
    <string name="image_user">Image User</string>
    <string name="jsmith_gmail_com">jsmith@gmail.com</string>
    <string name="john_smith">John Smith</string>
    <string name="background_img">background_img</string>
    <string name="d_gage">Dégage</string>
    <string name="francais_12_rue_de_la_rochefoucauld">Francais - 12 rue de la Rochefoucauld</string>
    <string name="ouvert_jusqu_7h">ouvert jusqu\'à 7h</string>
    <string name="_120_m">120 m</string>
    <string name="nombre_user">Nombre user</string>
    <string name="_2">(2)</string>
    <string name="nombre_toile_restaurant">Nombre étoile restaurant</string>
    <string name="pho_restau">pho_restau</string>
    <string name="photo_restaurant">photo_restaurant</string>
    <string name="bouton_de_pr_sence">bouton de présence</string>
    <string name="le_nzc">Le NZC</string>
    <string name="toile_resto">étoile_resto</string>

    <string name="horarynot">Pas d\'horaire</string>

    <string name="main_activity_description">Discute avec tes mentors, tout simplement.</string>

    <string name="login">Connexion</string>
    <string name="chat_with_mentor">Discute avec un mentor</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"Vous avez reçu une notification"</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Auncune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>
    <string name="check_box_is_mentor">Etes-vous un mentor ?</string>

    <!-- MENTOR_CHAT ACTIVITY -->
    <string name="toolbar_title_mentor_chat_activity">Chats de discussions</string>
    <string name="text_input_title_mentor_chat_activity">Composer votre message</string>
    <string name="button_title_mentor_chat_activity">ENVOYER</string>
    <string name="text_view_mentor_chat_error">Ce fil de discussion ne contient pour le moment aucun message&#8230;</string>
    <string name="popup_title_permission_files_access">Cette application a besoin de permission pour fonctionner.</string>
    <string name="toast_title_no_image_chosen">Aucune image choisie&#8230;</string>
</resources>