<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:id="@+id/rest"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nameRest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/d_gage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adrRest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/francais_12_rue_de_la_rochefoucauld"
        app:layout_constraintBottom_toTopOf="@+id/horary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameRest" />

    <TextView
        android:id="@+id/horary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ouvert_jusqu_7h"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_120_m"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"

        app:layout_constraintEnd_toStartOf="@+id/workmates"
        app:layout_constraintTop_toBottomOf="@+id/distance"
        android:contentDescription="@string/nombre_user" />

    <TextView
        android:id="@+id/workmates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/distance" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        android:contentDescription="@string/nombre_toile_restaurant" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/ic_food_donation_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/pho_restau" />

</androidx.constraintlayout.widget.ConstraintLayout>