<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/orange"
    tools:showIn="navigation_view">

    <item android:title=""
        >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_profile"
                    android:icon="@drawable/ic_baseline_local_dining_24"
                    android:title="@string/ylunch" />
                <item
                    android:id="@+id/activity_main_drawer_settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/activity_main_drawer_logout"
                    android:icon="@drawable/ic_outline_power_settings_new_24"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>

</menu>